--- a/roles/rbox-premptible-node/tasks/main.yml
+++ b/roles/rbox-premptible-node/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# This is exactly the same as normal nodes: it just has a different label
 - name: Disable SELinux
   shell: /usr/sbin/setenforce 0
 
