Do not launch RBox when deploying cluster

--- a/playbooks/os/openshift-cluster/launch_rbox.yml
+++ b/playbooks/os/openshift-cluster/launch_rbox.yml
@@ -6,9 +6,7 @@
   roles:
     - rbox-node
 
-- name: Configuring Masters for RBox
-  hosts: oo_masters_to_config
-  roles:
-    - rbox-master
-
-#- include: launch_couchbase.yml
+#- name: Configuring Masters for RBox
+#  hosts: oo_masters_to_config
+#  roles:
+#    - rbox-master
