--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -59,6 +59,10 @@
   command: '/usr/bin/openshift kube label node {{ item.openshift.common.hostname }} is_preemptible=no'
   with_items: non_preemptible_nodes
 
+- name: Create label on non preemptible nodes
+  command: '/usr/bin/openshift kube label node {{ item.openshift.common.hostname }} not_preemptible=true'
+  with_items: non_preemptible_nodes
+
 - name: Create label on preemptible nodes
   command: '/usr/bin/openshift kube label node {{ item.openshift.common.hostname }} is_preemptible=yes'
   with_items: preemptible_nodes
