--- a/roles/rbox-master/tasks/main.yml
+++ b/roles/rbox-master/tasks/main.yml
@@ -1,8 +1,5 @@
 ---
 
-- set_fact:
-    has_preemptible_node={% if 'num_preemptible_nodes' > 0 %}1{% else %}0{% endif %}
-
 - name: Installing git
   yum: name=git state=latest
 
@@ -10,18 +7,13 @@
   git:
     repo: http://172.16.141.210/git/scm/rbox/mip.git
     dest: ~/mip
-    version: multinode
+    version: jp-preemptible
     clone: yes
 
 - name: Launch R-Box
-  shell: export HAS_PREEMPTIBLE_NODE=${has_preemptible_node}; ./launch_rbox.sh artifactory
+  shell: ./launch_rbox.sh artifactory
   args:
     chdir: ~/mip
   environment: 
     OS_BIN: /usr/bin/openshift
 
-- name: Copy scheduler Json file
-  copy: src=files/scheduler.json dest=~/scheduler.json mode="u+rw,g+r,o+r"
-
-- name: Configure scheduler
-  shell: openshift cli create -f ~/scheduler.json -n siz-one
