fix: Notifies no longer use product_type.

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -77,14 +77,14 @@
   args:
     creates: "{{ openshift_master_policy }}"
   notify:
-  - restart {{ product_type }}-master
+  - restart master
 
 - name: Create the scheduler config
   template:
     dest: "{{ openshift_master_scheduler_conf }}"
     src: scheduler.json.j2
   notify:
-  - restart {{ product_type }}-master
+  - restart master
 
 - name: Install httpd-tools if needed
   yum: pkg=httpd-tools state=present
@@ -106,7 +106,7 @@
     dest: "{{ openshift_master_config_file }}"
     src: master.yaml.v1.j2
   notify:
-  - restart {{ product_type }}-master
+  - restart master
 
 - name: Configure master settings
   lineinfile:
@@ -119,7 +119,7 @@
     - regex: '^CONFIG_FILE='
       line: "CONFIG_FILE={{ openshift_master_config_file }}"
   notify:
-  - restart {{ product_type }}-master
+  - restart master
 
 - name: Start and enable master
   service: name={{ product_type }}-master enabled=yes state=started
