fix: known_openshift_product_types to openshift and atomic-enterprise only.

--- a/roles/openshift_repos/vars/main.yml
+++ b/roles/openshift_repos/vars/main.yml
@@ -1,3 +1,3 @@
 ---
 known_openshift_deployment_types: ['origin', 'online', 'enterprise']
-known_openshift_product_types: ['origin', 'openshift', 'atomic-enterprise']
+known_openshift_product_types: ['openshift', 'atomic-enterprise']
