example: Updated byo hosts example to include product_type.

--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -20,6 +20,10 @@ ansible_ssh_user=root
 # deployment type valid values are origin, online and enterprise
 deployment_type=enterprise
 
+# product type valud values are openshift and atomic-enterprise
+product_type=openshift
+
+
 # Pre-release registry URL
 #oreg_url=docker-buildvm-rhose.usersys.redhat.com:5000/openshift3/ose-${component}:${version}
 
