--- a/roles/openshift_manage_node/tasks/main.yml
+++ b/roles/openshift_manage_node/tasks/main.yml
@@ -22,3 +22,5 @@
     {{ openshift.common.client_binary }} label --overwrite node {{ item }} {{ hostvars[item]['openshift_node_labels'] | oo_combine_dict  }}
   with_items:
     -  "{{ openshift_nodes }}"
+  when: 
+    "'openshift_node_labels' in hostvars[item]"
