--- a/roles/rbox-master/tasks/main.yml
+++ b/roles/rbox-master/tasks/main.yml
@@ -7,7 +7,7 @@
   git:
     repo: http://172.16.141.210/git/scm/rbox/mip.git
     dest: ~/mip
-    version: jp-preemptible
+    version: multinode
     clone: yes
 
 - name: Launch R-Box
