--- a/playbooks/openstack/openshift-cluster/files/heat_stack_server.yaml
+++ b/playbooks/openstack/openshift-cluster/files/heat_stack_server.yaml
@@ -19,6 +19,12 @@ parameters:
     label: Type
     description: Type master or node
 
+  subtype:
+    type: string
+    label: Sub-type
+    description: Sub-type compute or infra for nodes, default otherwise
+    default: default
+
   key_name:
     type: string
     label: Key name
@@ -102,11 +108,12 @@ resources:
         env: { get_param: cluster_id }
         host-type: { get_param: type }
         env-host-type:
-          str_template:
+          str_replace:
             template: cluster_id-openshift-type
             params:
               cluster_id: { get_param: cluster_id }
               type:       { get_param: type }
+        sub-host-type:    { get_param: subtype }
 
   port:
     type: OS::Neutron::Port
