--- a/playbooks/adhoc/zabbix_setup/setup_zabbix.yml
+++ b/playbooks/adhoc/zabbix_setup/setup_zabbix.yml
@@ -5,22 +5,17 @@
   - vars/template_heartbeat.yml
   - vars/template_os_linux.yml
   vars:
-    # Use this for local ZAIO
     g_zserver: http://localhost/zabbix/api_jsonrpc.php
-
     g_zuser: Admin
     g_zpassword: zabbix
   roles:
-  - ../roles/os_zabbix
+  - ../../../roles/os_zabbix
   post_tasks:
-  - zbxapi:
+  - zbx_template:
       server: "{{ g_zserver }}"
       user: "{{ g_zuser }}"
       password: "{{ g_zpassword }}"
-      zbx_class: Template
       state: list
-      params:
-        output: extend
     register: templates
 
   - debug: var=templates
