oo_nodes_config updated (deleted useless group inside), added debug messages for preemtible

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -39,7 +39,7 @@
 - name: Register nodes
   hosts: oo_first_master
   vars:
-    openshift_nodes: "{{ hostvars | oo_select_keys(groups['oo_nodes_to_config'] | union(groups['oo_preemptible_nodes_to_config'] | default([])))}}"
+    openshift_nodes: "{{ hostvars | oo_select_keys(groups['oo_nodes_to_config'] | default([]))}}"
     sync_tmpdir: "{{ hostvars.localhost.mktemp.stdout }}"
     non_preemptible_nodes: "{{ hostvars | oo_select_keys(groups['oo_non_preemptible_nodes']) }}"
     preemptible_nodes: "{{ hostvars | oo_select_keys(groups['oo_preemptible_nodes'] | default([])) }}"
