--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -55,6 +55,12 @@
   with_items: openshift_nodes
   register: register_result
 
+- name: Displaying non preemptible nodes
+  debug: var=non_preemptible_nodes
+
+- name: Displaying preemtible nodes
+  debug: var=preemptible_nodes
+
 - name: Create label on non preemptible nodes
   command: '/usr/bin/openshift kube label node {{ item.openshift.common.hostname }} is_preemptible=no'
   with_items: non_preemptible_nodes
