fixed a debug var=hostvars in openshift-node config

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -35,8 +35,6 @@
     register: mktemp
     changed_when: False
 
-- name: Deplaying hostvars (first time)
-  debug: var=hostvars
 
 - name: Register nodes
   hosts: oo_first_master
@@ -48,6 +46,10 @@
   roles:
   - openshift_register_nodes
   tasks:
+  #DEBUG TASK
+  - name: Deplaying hostvars (first time)
+    debug: var=hostvars
+  #
   # TODO: update so that we only sync necessary configs/directories, currently
   # we sync for all nodes in oo_nodes_to_config.  We will need to inspect the
   # configs on the nodes to make the determination on whether to sync or not.
