join node : added a boolean parameter preemptible to know if the node is preemptible or not

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -47,7 +47,7 @@
   - openshift_register_nodes
   tasks:
   #DEBUG TASK
-  - name: Deplaying hostvars (first time)
+  - name: Deplaying hostvars first time
     debug: var=hostvars
   #
   # TODO: update so that we only sync necessary configs/directories, currently
