--- a/playbooks/os/openshift-cluster/join_node.yml
+++ b/playbooks/os/openshift-cluster/join_node.yml
@@ -33,7 +33,7 @@
       ansible_ssh_user: "{{ deployment_vars[deployment_type].ssh_user }}"
       ansible_sudo: "{{ deployment_vars[deployment_type].sudo }}"
       groups: oo_preemptible_nodes
-    when: "preemptible=true"
+    when: preemptible is defined and preemptible == "true"
   
   - name: Add to not preemptible group if needed
     add_host:
@@ -41,7 +41,7 @@
       ansible_ssh_user: "{{ deployment_vars[deployment_type].ssh_user }}"
       ansible_sudo: "{{ deployment_vars[deployment_type].sudo }}"
       groups: oo_non_preemptible_nodes
-    when: "preemptible=false"
+    when: preemptible is defined and preemptible == "false"
   
   - name: Evaluate oo_first_master
     add_host:
