Added /root/.kube to be deleted so that the stuff there does not prevent a new install.

--- a/playbooks/adhoc/tutorial-reset.yml
+++ b/playbooks/adhoc/tutorial-reset.yml
@@ -39,6 +39,7 @@
         - /etc/atomic-enterprise
         - /etc/openshift
         - /var/lib/docker
+        - /root/.kube
 
     - user: name={{ item }} state=absent remove=yes
       with_items:
