--- a/playbooks/common/openshift-cluster/set_preemptible_node_launch_facts_tasks.yml
+++ b/playbooks/common/openshift-cluster/set_preemptible_node_launch_facts_tasks.yml
@@ -1,6 +1,6 @@
 ---
 - set_fact: 
-    k8s_type="node-preemptible"
+    k8s_type="nodepreemptible"
     start_value={% if num_preemptible_nodes|int == 0 or num_preemptible_nodes is undefined  %}0{% else %}1{% endif %}
 
 - debug: msg="num_preemptible_nodes = {{ num_preemptible_nodes }}, start_value = {{ start_value }}"
