commented some debugs

--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -47,8 +47,8 @@
   - openshift_register_nodes
   tasks:
   #DEBUG TASK
-  - name: Deplaying hostvars first time
-    debug: var=hostvars
+  #- name: Deplaying hostvars first time
+  #  debug: var=hostvars
   #
   # TODO: update so that we only sync necessary configs/directories, currently
   # we sync for all nodes in oo_nodes_to_config.  We will need to inspect the
