--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -55,8 +55,8 @@
   with_items: openshift_nodes
   register: register_result
 
-- name: Displaying hostvars 
-  debug: var=hostvars
+#- name: Displaying hostvars 
+#  debug: var=hostvars
 
 - name: Displaying non preemptible nodes
   debug: var=non_preemptible_nodes
