--- a/playbooks/common/openshift-etcd/config.yml
+++ b/playbooks/common/openshift-etcd/config.yml
@@ -73,6 +73,7 @@
     etcd_url_scheme: https
     etcd_peer_url_scheme: https
     etcd_peers_group: oo_etcd_to_config
+    etcd_initial_cluster_token: etcd-os-cluster-1
   pre_tasks:
   - name: Ensure certificate directory exists
     file:
