--- a/roles/openshift_master/handlers/main.yml
+++ b/roles/openshift_master/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: restart master
-  service: name={{ product_type }}-master state=restarted
+  service: name={{ service_type }}-master state=restarted
   when: not openshift_master_ha | bool
