--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -18,6 +18,7 @@
       public_hostname: "{{ openshift_public_hostname | default(none) }}"
       deployment_type: "{{ openshift_deployment_type }}"
       product_type: "{{ openshift_product_type }}"
+      service_type: "{{ 'origin' if deployment_type == 'origin' else 'atomic-enterprise' }}"
   - role: node
     local_facts:
       labels: "{{ openshift_node_labels | default(none) }}"
@@ -26,6 +27,7 @@
       debug_level: "{{ openshift_node_debug_level | default(openshift.common.debug_level) }}"
       portal_net: "{{ openshift_master_portal_net | default(None) }}"
       product_type: "{{ openshift_product_type }}"
+      service_type: "{{ 'origin' if deployment_type == 'origin' else 'atomic-enterprise' }}"
 
 - name: Install Node package
   yum: pkg={{ product_type }}-node state=present
@@ -72,7 +74,7 @@
   seboolean: name=virt_use_nfs state=yes persistent=yes
 
 - name: Start and enable node
-  service: name={{ product_type }}-node enabled=yes state=started
+  service: name={{ service_type }}-node enabled=yes state=started
   register: start_result
 
 - name: pause to prevent service restart from interfering with bootstrapping
